fix: QPagination field width on Firefox

--- a/src/components/pagination/pagination.ios.styl
+++ b/src/components/pagination/pagination.ios.styl
@@ -5,6 +5,8 @@
     -moz-appearance textfield
   .q-if
     margin 8px 0 0 0
+  .q-input-target
+    width 100%
   .q-btn
     padding 0 5px !important
     &.disabled
